--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	html {
+		font-family: "Noto Sans", sans-serif;
+		font-optical-sizing: auto;
+		font-weight: 400;
+	}
+}
