--- a/pkgs/install/morrowind/default.nix.vm
+++ b/pkgs/install/morrowind/default.nix.vm
@@ -12,8 +12,8 @@ pkgs.writeShellScriptBin "install.sh" ''
   # The flake to use
   FLAKE="github:Kodlak15/nixos-flake"
 
-  BOOTDISK="/dev/sda"
-  ROOTDISK="/dev/sda"
+  BOOTDISK="/dev/vda"
+  ROOTDISK="/dev/vda"
   NBOOT="1"
   NROOT="2"
 
